# gemini-porn-renamer

./: .env.example  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  README.md  REFACTORING_SUMMARY.md  pyproject.toml  requirements.txt  核心需求.md  记录-不要修改和删除.md
.cursor/rules/: concurrent-analysis-system.mdc  data-flow-pipeline.mdc  frame-sampling-algorithms.mdc  naming-generation-system.mdc
.kiro/specs/project-refactoring/: design.md  requirements.md  tasks.md
.serena/: project.yml
.windsurf/rules/: concurrent-analysis-system.md  data-flow-pipeline.md  frame-sampling-algorithms.md  naming-generation-system.md
config/: analysis_tasks.yaml  llm_backends.yaml
config/prompts/analysis/: face_visibility.yaml  positions.yaml  role_archetype.yaml  scene_type.yaml
config/prompts/naming/: system.yaml
docs/: NEXT_STEPS.md  README.md  cli.md  concurrent-strategy-explained.md  configuration.md  decisions.md  gptload-api.md  maintenance.md  naming-styles.md  setup.md  testing-guide.md
examples/: naming_samples.yaml  naming_styles.yaml
prompts/: base.system.md  preset.yaml
prompts/modules/: face_visibility.md  name_generator.md  positions.md  role_archetype.md  scene_type.md
scripts/debug/: README.md  debug_analysis.py  debug_llm.py  debug_naming.py  debug_video.py
src/vrenamer/: main.py  scanner.py
src/vrenamer/cli/: app.py  interactive.py  main.py
src/vrenamer/cli/commands/: __init__.py  run.py  scan.py
src/vrenamer/core/: __init__.py  config.py  exceptions.py  logging.py  types.py
src/vrenamer/llm/: __init__.py  adapter.py  base.py  client.py  factory.py  gemini.py  json_utils.py  openai.py  prompts.py
src/vrenamer/naming/: __init__.py  generator.py  styles.py
src/vrenamer/services/: __init__.py  analysis.py  naming.py  scanner.py  transcript.py  video.py
src/vrenamer/webui/: app.py  settings.py
src/vrenamer/webui/services/: pipeline.py  prompting.py
tests/: __init__.py  conftest.py  test_naming_styles.py  test_pipeline.py
意见/: 意见-crush.md
